# PenguinJudge

./: .gitignore  LICENSE  README.md  docker-compose.yml  schema.yaml
.docker-compose/: config.ini  prepare.py
.github/workflows/: agent.yml  backend-CI.yml  backend.yml  docker-image.yml  frontend.yml
agent/: Cargo.toml  README.md  build_static_binary.sh
agent/src/: agent.rs  config.rs  lib.rs  main.rs  models.rs
agent/tests/: basic_test.rs
backend/: .coveragerc  Dockerfile  Pipfile  README.md  config.ini.template  setup.cfg  setup.py
backend/db/: addtest.py  judge_db_server.py
backend/local_test_scripts/: add_testdata_to_db.py  api_server_test.sh  post_submit.sh  send_testqueue_to_mq.py
backend/penguin_judge/: api.py  check_result.py  db_server.py  judge_db_server.py  main.py  models.py  mq.py  run_container.py  schema.yaml  test.py  utils.py  worker.py
backend/tests/: __init__.py  addtest.py  sendtest.py  sendtest2.py  test_api.py
container/: README.md  build.sh  penguin_judge_agent  pull.sh
container/c/: Dockerfile.compile:8.2  Dockerfile.compile:9.3  Dockerfile.judge:9.3  config.compile.json  config.judge.json
container/cpp/: Dockerfile.compile:8.2  (+4 more)
container/rust/work-v1/: Cargo.toml
container/rust/work-v1/src/: main.rs
design/: gui.pptx  judgesystem_memo.pptx
frontend/: .gitignore  Dockerfile  README.md  nginx.sample.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
tools/: README.md  common.py  env.py  load_test.py  mq_enqueue.py  register_contest.py  register_environments.py  register_user.py  reset_password.py
(+107 files in other folders)
