[package]
name = "penguin_judge_agent"
version = "0.0.0"
authors = ["Kazuki Oikawa <k@oikw.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.14"
byteorder = "1"
wait-timeout = "0.2"