[package]
name = "penguin_test"
version = "0.1.0"
authors = ["Kazuki Oikawa <k@oikw.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"
num-traits = "0.2"
num-derive = "0.3"
ndarray = "0.13.1"
nalgebra = "0.21.1"
libm = "0.2.1"
rand = "0.7.3"
rand_distr = "0.2.2"
petgraph = "0.5.1"
indexmap = "1.5.0"
regex = "1.3.9"
lazy_static = "1.4.0"
ordered-float = "2.0.0"
ascii = "1.0.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.9.0"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.5.3"
im-rc = "15.0.0"
fixedbitset = "0.3.0"
bitset-fixed = "0.1.0"
proconio = "0.4.1"
text_io = "0.1.8"
whiteread = "0.5.0"
rustc-hash = "1.1.0"
smallvec = "1.4.1"
